feat: adding dockerfile, swagger update
